force-app/main/default/objects/Account/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <length>10</length>
    <type>Text</type>
</CustomField>