force-app/main/default/objects/Account/fields/TestFormula2__c.field-meta.xml
<CustomField>
    <fullName>TestFormula2__c</fullName>
    <formula>Days__c != &apos;N/A&apos; &amp;&amp; VALUE(Days__c) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormula2</label>
    <type>Checkbox</type>
</CustomField>