force-app/main/default/objects/Account/fields/TestFormula3__c.field-meta.xml
<CustomField>
    <fullName>TestFormula3__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormula3</label>
    <type>Checkbox</type>
</CustomField>