force-app/main/default/objects/Account/fields/TestFormula__c.field-meta.xml
<CustomField>
    <fullName>TestFormula__c</fullName>
    <formula>TestFormula2__c || TestFormula3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormula</label>
    <type>Checkbox</type>
</CustomField>